Finish migration
Signed-off-by: Rahul Krishna <i.m.ralk@gmail.com>